Add sample apps

--- a/.fractal/app-reader-fdeploy.yaml
+++ b/.fractal/app-reader-fdeploy.yaml
@@ -32,51 +32,10 @@ spec:
       serviceAccountName: app-reader
       containers:
         - name: app-reader
-          image: europe-west3-docker.pkg.dev/fractal-demo-0/fractal-cloud-containers/monitoring/prometheus-config-reloader:v0.76.2
+          image: $IMAGE_READER
           imagePullPolicy: IfNotPresent
-          ports:
-            - containerPort: 8080
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: app-reader
-  namespace: app
-spec:
-  type: ClusterIP
-  selector:
-    app: app-reader
-  ports:
-    - protocol: TCP
-      name: http-traffic
-      port: 8081
-      targetPort: 8081
----
-apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
-metadata:
-  name: app-reader-service-monitor
-  namespace: app
-spec:
-  selector:
-    matchLabels:
-      app: app-reader
-  endpoints:
-    - port: http-traffic
-      interval: 30s
-      path: "/actuator/prometheus"
----
-apiVersion: getambassador.io/v3alpha1
-kind: Mapping
-metadata:
-  labels:
-    app.kubernetes.io/created-by: Fractal
-    app.kubernetes.io/instance: app-reader-mapping
-    app.kubernetes.io/name: app-reader-mapping
-  name: app-reader-mapping
-  namespace: app
-spec:
-  host: 108.141.132.247
-  prefix: /employees-reader
-  rewrite: /employees
-  service: http://app-reader.app.svc:8081
+          env:
+            - name: KAFKA_BOOTSTRAP_SERVERS
+              value: $KAFKA_BOOTSTRAP_SERVERS
+            - name: ENVIRONMENT
+              value: $ENVIRONMENT
