--- a/.fractal/app-reader-fdeploy.yaml
+++ b/.fractal/app-reader-fdeploy.yaml
@@ -33,7 +33,7 @@ spec:
       containers:
         - name: app-reader
           image: $IMAGE_READER
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           env:
             - name: KAFKA_BOOTSTRAP_SERVERS
               value: $KAFKA_BOOTSTRAP_SERVERS
