--- a/.fractal/app-writer-fdeploy.yaml
+++ b/.fractal/app-writer-fdeploy.yaml
@@ -30,7 +30,7 @@ spec:
       containers:
         - name: app-writer
           image: $IMAGE_WRITER
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           env:
             - name: KAFKA_BOOTSTRAP_SERVERS
               value: $KAFKA_BOOTSTRAP_SERVERS
