--- a/application/reader/app/src/main/resources/consumer.config
+++ b/application/reader/app/src/main/resources/consumer.config
@@ -1,3 +1,5 @@
+group.id=$Default
+request.timeout.ms=60000
 security.protocol=SASL_SSL
 sasl.mechanism=OAUTHBEARER
 sasl.jaas.config=org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required;
