--- a/.fractal/app-writer-fdeploy.yaml
+++ b/.fractal/app-writer-fdeploy.yaml
@@ -24,6 +24,7 @@ spec:
   template:
     metadata:
       labels:
+        azure.workload.identity/use: "true"
         app: app-writer
     spec:
       serviceAccountName: app-writer
